language/move-lang/tests/move_check/parser/module_missing_lbrace.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/module_missing_lbrace.move:2:5
  │
2 │     fun f() {}
  │     ^^^
  │     │
  │     Unexpected 'fun'
  │     Expected '{'

